<resources>
    <string name="app_name">CookPad</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_create">Creation</string>
    <string name="title_interact">Interaction</string>
    <string name="title_profile">Profile</string>
    <string name="title_view_post" translatable="false">ViewPost</string>

    <string name="title_inspiration_store">Kho Cảm Hứng</string>
    <string name="title_kitchen_friend">Các Bạn Bếp</string>
    <string name="login_with_google">Đăng nhập bằng Google</string>
    <string name="other_option">Lựa chọn khác</string>
    <string name="test">Xuất phiếu đi chợ</string>
    <string name="account">Tài khoản:</string>
    <string name="password">Mật khẩu:</string>
    <string name="hint_account">Nhập tài khoản của bạn</string>
    <string name="hint_password">Nhập mật khẩu của bạn</string>
    <string name="register">Đăng ký</string>
    <string name="login">Đăng Nhập</string>
    <string name="enter_your_name" translatable="false">Nhập tên của bạn</string>
    <string name="cookpad_id" translatable="false">/@long1999</string>
    <string name="about">Vài dòng về bạn và đam mê nấu nướng</string>
    <string name="from">Bạn đến từ ?</string>
    <string name="address">Địa chỉ</string>
    <string name="id_user">ID người dùng</string>
    <string name="user_name">Tên người dùng</string>
    <string name="update">Cập Nhập</string>
    <string name="titleAbout">Thông tin cơ bản</string>
    <string name="title_description">Truyền cảm hứng vào bếp đến mọi người nào</string>
    <string name="write_something">Viết gì đó mới</string>
    <string name="no_result">Không thấy món bạn muốn ?</string>
    <string name="let_create_food">Hãy là người đầu tiên chia sẻ cách làm món đó để giúp các bạn khác nhé!</string>
    <string name="new_food">Món mới</string>
    <string name="add_food">Thêm món</string>
    <string name="speech_prompt" translatable="false">Nói gì đó…</string>
    <string name="speech_not_supported" translatable="false">Xin lỗi, thiết bị của bạn không hỗ trợ giọng nói</string>

    <string-array name="role">
        <item>Người dùng</item>
        <item>Shipper</item>
    </string-array>

    <string name="format_detail" translatable="false">%s %s</string>
    <string name="my_cart">Giỏ hàng của bạn</string>
</resources>