<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.paulbaker.cookpad.feature.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.paulbaker.cookpad.feature.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_creation"
        android:name="com.paulbaker.cookpad.feature.creation.CreationFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_creation">
        <action
            android:id="@+id/actionCreation"
            app:destination="@+id/fragmentCreateDetail"
            app:enterAnim="@anim/slide_bottom"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_top"/>

    </fragment>


    <fragment
        android:id="@+id/fragmentCreateDetail"
        android:name="com.paulbaker.cookpad.feature.creation.fragment.CreateNewFood"
        tools:layout="@layout/create_detail" />


    <fragment
        android:id="@+id/navigation_interaction"
        android:name="com.paulbaker.cookpad.feature.interaction.InteractionFragment"
        android:label="@string/title_interact"
        tools:layout="@layout/fragment_interaction" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.paulbaker.cookpad.feature.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/actionOpenGallery"
            app:destination="@+id/fragmentGallery"
            app:enterAnim="@anim/slide_bottom"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_top"/>
    </fragment>

</navigation>